syntax = "proto3";
package agent;
option go_package = "github.com/hcp-uw/doom-scrollers/agents/agent-client";

message TestMethodRequest {
  string file_name = 1;
}

message TestMethodResponse {
  string status = 1;
  string response = 2;
  string error_message = 3;
}

service TestAgent {
  rpc TestMethod (TestMethodRequest) returns (TestMethodResponse);
}